# toml_config

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.py
toml_config/: core.py
