[tool.poetry]
name = "toml_config"
version = "0.1.0"
description = "Python library for easy parsing and creating toml configuration files"
authors = ["Aleksey Semenov <7.on.off@bk.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
